<resources>
    <string name="app_name">GithubClient</string>

    <string name="counter_one">Счетчик 1</string>
    <string name="counter_two">Счетчик 2</string>
    <string name="counter_three">Счетчик 3</string>
    <string name="login">login</string>
    <string name="user">user</string>
    <string name="repositoryName">repositoryName</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="number_of_forks">Number of forks:</string>
    <string name="example">example</string>
    <string name="repositories">Repositories</string>
    <string name="follow">Follow</string>
    <string name="repository">repository</string>
    <string name="repository_forks_count">repository_forks_count</string>
    <string name="repository_id">repository_id</string>

</resources>